Update Trevas version