@@ -10,7 +10,7 @@
     </parent>
     <groupId>info.makingsense</groupId>
     <artifactId>trevas-batch</artifactId>
-    <version>0.2.0</version>
+    <version>0.3.0</version>
     <name>trevas-batch</name>
 
     <licenses>
@@ -22,8 +22,8 @@
 
     <description>Trevas batch</description>
     <properties>
-        <java.version>11</java.version>
-        <trevas.version>1.1.1</trevas.version>
+        <java.version>17</java.version>
+        <trevas.version>1.2.0</trevas.version>
         <log4j.version>2.20.0</log4j.version>
         <slf4j.version>2.0.7</slf4j.version>
     </properties>
@@ -226,6 +226,17 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
